--- a/symfony/templates/account/index.html.twig
+++ b/symfony/templates/account/index.html.twig
@@ -1,20 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AccountController!{% endblock %}
+{% block title %}{{ 'templates.account.index.title'|trans }}{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/var/www/symfony/src/Controller/AccountController.php'|file_link(0) }}">src/Controller/AccountController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/var/www/symfony/templates/account/index.html.twig'|file_link(0) }}">templates/account/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <div>
+        <h1>{{ 'templates.account.index.h1'|trans }}</h1>
+        <ul>
+            <li>{{ user.firstName }}</li>
+            <li>{{ user.lastName }}</li>
+        </ul>
+        <a href="{{ path('account_change_password') }}">{{ 'templates.account.index.change_password'|trans }}</a>
+    </div>
 {% endblock %}
