--- a/symfony/templates/fragments/_footer.html.twig
+++ b/symfony/templates/fragments/_footer.html.twig
@@ -1,3 +1,14 @@
-<footer>
-    @{{ brand_name }}
+<footer class="p-4">
+    <div class="row">
+        <div class="col-3"></div>
+        <div class="col-3"></div>
+        <div class="col-3">
+            <h2>Products</h2>
+        </div>
+        <div class="col-3">
+            <h2>Company</h2>
+            <a href="{{ path('contact_us') }}">Contact us</a>
+            <p>@{{ brand_name }}</p>
+        </div>
+    </div>
 </footer>
