--- a/symfony/templates/user_security/login.html.twig
+++ b/symfony/templates/user_security/login.html.twig
@@ -1,42 +1,51 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block title %}{{ 'templates.user_security.login.title'|trans }}{% endblock %}
 
 {% block body %}
-<form method="post">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+    <div class="security-form card">
+        <div class="card-body">
+            <div class="d-flex flex-column text-center">
+                <h1 class="h3 my-2">{{ 'templates.user_security.login.h1'|trans }}</h1>
+                <p class="mb-3 small">{{ 'templates.user_security.login.subtitle'|trans }}</p>
+            </div>
+            <form method="post">
+                {% if error %}
+                    <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                {% endif %}
 
-    {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
+                <div class="form-group">
+                    <label for="inputEmail" class="required">{{ 'templates.user_security.login.email.label'|trans }}</label>
+                    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" placeholder="{{ 'templates.user_security.login.email.placeholder'|trans }}" required autofocus>
+                </div>
+                <div class="form-group">
+                    <div>
+                        <label for="inputPassword" class="float-left required">{{ 'templates.user_security.login.password.label'|trans }}</label>
+                        <a href="{{ path('reset_password_request') }}" class="float-right">{{ 'templates.user_security.login.password.forgotten'|trans }}</a>
+                    </div>
+                    <input type="password" name="password" id="inputPassword" class="form-control" placeholder="{{ 'templates.user_security.login.password.placeholder'|trans }}" required>
+                </div>
+
+                <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
+                <div class="form-group">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" name="_remember_me" id="_remember_me">
+                        <label for="_remember_me" class="form-check-label">
+                            {{ 'templates.user_security.login.remember_me.text'|trans({'%remember_me%': (remember_me_lifetime / 60 / 60 / 24)}) }}
+                        </label>
+                    </div>
+                </div>
+
+                <button class="w-100 btn btn-lg btn-primary text-uppercase" type="submit">
+                    {{ 'templates.user_security.login.submit'|trans }}
+                </button>
+            </form>
+            <hr class="my-4">
+            <p class="small">
+                {{ 'templates.user_security.login.register.main_text'|trans }}
+                <a href="{{ path('register') }}">{{ 'templates.user_security.login.register.link_text'|trans }}</a>
+            </p>
         </div>
-    {% endif %}
-
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail" class="sr-only">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" placeholder="Email" required autofocus>
-    <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
-
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
-
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
-
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
-        </div>
-    #}
-
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
-    </button>
-</form>
+    </div>
 {% endblock %}
