--- a/symfony/templates/main/index.html.twig
+++ b/symfony/templates/main/index.html.twig
@@ -5,5 +5,6 @@
 {% block body %}
     <div class="homepage">
         <p>Homepage</p>
+        <a href="{{ path('products_list') }}">Liste produits</a>
     </div>
 {% endblock %}
