--- a/symfony/templates/base.html.twig
+++ b/symfony/templates/base.html.twig
@@ -2,6 +2,7 @@
 <html lang="fr_FR">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>{{ brand_name }} - {% block title %}{% endblock %}</title>
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
